--- a/özelders/templates/özelders/icerik_giris_yok.html
+++ b/özelders/templates/özelders/icerik_giris_yok.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-5">
                     <p class="text-center" >
-                        Lorem ipsum dolor sit amet.
+                         ipsum dolor sit amet.
                     </p>
                 </div>
             </div>
