main page restore

--- a/özelders/templates/özelders/navbar.html
+++ b/özelders/templates/özelders/navbar.html
@@ -70,7 +70,7 @@
   </nav>
   {% if messages %}
             {% for mesaj in messages %}
-                <div class="alert alert-{{mesaj.tags}} text-center ">{{mesaj}}</div>
+                <div class="alert alert-{{mesaj.tags}} text-center mb-0">{{mesaj}}</div>
 
             {% endfor %}
         {% endif %}
