--- a/özelders/templates/özelders/icerik_giris_yok.html
+++ b/özelders/templates/özelders/icerik_giris_yok.html
@@ -58,7 +58,7 @@
             <div class="progress mb-3 ">
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Default striped example" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <h3>React</h3>
+            <h3>ReactJS</h3>
             <div class="progress mb-3 ">
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Default striped example" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -85,27 +85,32 @@
         
 
         <div class="container mt-5">
-            <h3 class=" text-center " >Yazılım</h3>
+            <h3 class=" text-center " >YAZILIM VE GELİŞİM</h3>
             <div class="row">
                 <div class="col-5">
                     <img src="{% static 'özelders/img/yazılım.jpg' %}" class="img-fluid rounded " alt="">
                 </div>
-                <div class="col-5">
-                    <p class="text-center" >
-                          dolor sit amet.
+                <div class="col-7">
+                    <p class="text-center ms-1" >
+                        Hazırlanan bu internet sayfasında yazılım ile ilgili pek çok paylaşıma rastlayacaksınız. Matematiği bir ağaç gibi düşünürsek, bu ağacın köklerinden birini de yazılım olarak tasarlayabiliriz. Yazılım, 0 ve 1dir; 0 ve 1 de hayatın işleyişi, akışı ve mantığıdır. Sizi hatasız işleyiş ve işlevsel döngüye ulaştırabilir. 
+
+                        Öğrenmek yolda olmaktır. Hiç bitmez ve hep devam eder. Yazılım için de bu durum böyledir. Gelişim bakidir. Bu yolda öğrendiklerimi
+                        ve öğrenmekte olduğum acı tadlı tecrübelieri sizlerle paylaşacağım.
                     </p>
                 </div>
             </div>
         </div>
         <div class="container mt-5">
-            <h3 class=" text-center " >Kripto</h3>
+            <h3 class=" text-center " >KRİPTO PARA</h3>
             <div class="row">
-                <div class="col-6">
-                    <p class="text-center" >
-                        Lorem ipsum dolor sit amet.
+                <div class="col-7">
+                    <p class="text-center m-auto " >
+                        Etrafınıza baktığınızda insanların sürekli para harcadığını görürsünüz. Siz de harcarsınız, yaşamanın temeli bu çıkar ilişkisine dayanır.
+                         Ancak büyük meblağalar ve kârlardan bahsediyorsak daha büyük düşünmemiz gerekir. Kredi kartları veya nakit taşınması sizin için yeterlidir belki ama her şeyin dijitalleştiği bu dönemde sizce de yeniliğin zamanı gelmedi mi? Örneğin bitcoine yatırım yapanların günümüzde ne kadar tatmin olduğu inkar edilemez bir gerçek. Sonraki kripto biriminin de en az bitcoin kadar sansasyonel olup olmayacağını nerden bilebiliriz ki? Uygun yatırımlar
+                         yapıldığı takdirde dijital ortamdan sağlanan bu gelir size hem güvence hem kâr sağlar. Bu yüzden kripto para, geleceğin umududur.
                     </p>
                 </div>
-                <div class="col-6 ">
+                <div class="col-5 ">
                     <img src="{% static 'özelders/img/kripto1.jpg' %}" class="img-fluid rounded " alt="">
                 </div>
             </div>
@@ -113,14 +118,18 @@
 
 
         <div class="container mt-5">
-            <h3 class=" text-center " >Matematik</h3>  
+            <h3 class=" text-center " >MANTIK VE OLASILIK</h3>  
             <div class="row">
                 <div class="col-5">
                     <img src="{% static 'özelders/img/matematik.jpg' %}" class="img-fluid rounded " alt="">
                 </div>
-                <div class="col-5">
+                <div class="col-7">
                     <p class="text-center" >
-                    
+                        “O zaman şöyle sorayım soruyu: Çıldırmaya başladığımda tam olarak ne yapmamı öneriyorsunuz?”
+                        <br><br>
+                        Diye sormuştu OLASILIKSIZ kitabında ADAM FAWER... Çıldırmaya başladığımda mı matematiği anlamaya başladım yoksa matematiği anladığımda mı çıldırmaya başladım bilinmese
+                        dünya üzerinde benim için matematiksiz bir hayat düşünülemez... İşte tam bu noktada bu siteyi de matematiksiz düşünemeyeceğime karar verip aşık olduğum bu disiplin ile de bir rkaç yazı kaleme almaya karar verdim.. <br>
+
                     </p>
                 </div>
             </div>
