--- a/blog/templates/blog/kripto.html
+++ b/blog/templates/blog/kripto.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     {% include "özelders/navbar.html" %}
-
+    {% if user.is_authenticated %}
     <div class="container  mt-5 pt-2">
       <div class="   my-5">
         {% for i in kripto  %}
@@ -29,16 +29,17 @@
                 <a href="{% url 'kripto_detay' i.slug %}" class="btn btn-warning shadow">Detaylı Oku</a>
               </div>
             </div>
-            
-
         {% endfor %}
       </div>
      </div>
+
+     {% else %}
+     {% include 'özelders/icerik_giri_yok.html' %}
    
      {% include "özelders/footer_in.html" %}
 
 
 
-     
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
