--- a/blog/templates/blog/kripto_detay.html
+++ b/blog/templates/blog/kripto_detay.html
@@ -15,7 +15,7 @@
 <body>
     
     {% include "özelders/navbar.html" %}
-
+    {% if user.is_authenticated %}
     {% for i in kripto  %}
     <div class="container mt-2   p-5 mb-5"  >
       <div class="row">
@@ -31,6 +31,9 @@
       </div>
     </div>
 
+    {% else %}
+    {% include 'özelders/icerik_giri_yok.html' %}
+
     
     
     {% include 'özelders/footer_in.html' %}
@@ -38,6 +41,6 @@
     
 
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
