--- a/blog/templates/blog/yazilim_detay.html
+++ b/blog/templates/blog/yazilim_detay.html
@@ -16,28 +16,29 @@
     
     {% include "özelders/navbar.html" %}
 
-    {% for i in yazilim  %}
-    <div class="container mt-2   p-5 mb-5"  >
-      <div class="row">
-        <div class=" col-xl-6 col-lg-8 col-md-10 col-sm-12 py-5 ">
-          <img src="{{ i.resim.url }}"  class="img-fluid" alt=""   >
-          <p class=" my-3 " >{{ i.tarih }}</p>
+    {% if user.is_authenticated %}
+      {% for i in yazilim  %}
+      <div class="container mt-2   p-5 mb-5"  >
+        <div class="row">
+          <div class=" col-xl-6 col-lg-8 col-md-10 col-sm-12 py-5 ">
+            <img src="{{ i.resim.url }}"  class="img-fluid" alt=""   >
+            <p class=" my-3 " >{{ i.tarih }}</p>
+          </div>
+          <div class="">
+            <h3>{{i.baslik}}</h3>
+            <p>{{i.aciklama}}</p>
+          </div>
+          {% endfor %}
         </div>
-        <div class="">
-          <h3>{{i.baslik}}</h3>
-          <p>{{i.aciklama}}</p>
-        </div>
-        {% endfor %}
       </div>
-    </div>
-
-    
+    {% else %}
+    {% include 'özelders/icerik_giris_yok.html' %}
     
     {% include 'özelders/footer_in.html' %}
 
     
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     
 </body>
 </html>
