--- a/özelders/templates/özelders/icerik.html
+++ b/özelders/templates/özelders/icerik.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/6817205a99.js" crossorigin="anonymous"></script>
  
-  <title>Document</title>
+  <title>MAIN</title>
 </head>
 <body>
   <div class="container main  ">
