--- a/özelders/templates/özelders/icerik_giris_yok.html
+++ b/özelders/templates/özelders/icerik_giris_yok.html
@@ -15,18 +15,16 @@
 </head>
 <body> 
       
-    <div class="hero-image ">
+    <div class="hero-image">
         <div class="hero-text">
-          <h1 style="font-size:50px">Ben, Umur SAVUT</h1>
-          <p>Full Stack Developer</p>
-          
+          <h1 style="font-size:50px">Ben Umur Savut</h1>
+          <p>Full Stack Dev</p>
+          <button>Bana Ulaş</button>
         </div>
       </div>
-      <div class="container border my-3 py-3 rounded ">
         
-        <div class="div">
-        <h1 class=" text-center fw-bold " >Bildiğim Yazılım Dilleri</h1>
-    </div>
+    <div class="container  border rounded border-dark mb-4  mt-5 py-5">
+        <h1 class=" text-center fw-bold pt-4" >Bildiğim Yazılım Dilleri</h1>
         <div class="python">
             <h3>Python:</h3>
             <div class="progress mb-3 ">
@@ -47,6 +45,7 @@
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Default striped example" style="width: 95%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
+
         <div class="python">
             <h3>Java Script:</h3>
             <div class="progress mb-3 ">
@@ -63,15 +62,9 @@
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Default striped example" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
+
         <div class="python">
-            <h3>Flutter:</h3>
-            <div class="progress mb-3 ">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-label="Default striped example" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        </div>
-        
-        <div class="python">
-            <h3>Html & Css:</h3>
+            <h3>Html & Css</h3>
             <div class="progress mb-3 ">
                 <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" aria-label="Default striped example" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -82,16 +75,22 @@
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Default striped example" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
+
+   
+
+
+    
         
 
-        <div class="container mt-5">
+
+        <div class="container mt-5 ">
             <h3 class=" text-center " >YAZILIM VE GELİŞİM</h3>
             <div class="row">
-                <div class="col-5">
+                <div class="col-lg-12 col-xl-6">
                     <img src="{% static 'özelders/img/yazılım.jpg' %}" class="img-fluid rounded " alt="">
                 </div>
-                <div class="col-7">
-                    <p class="text-center ms-1" >
+                <div class="col-lg-12 col-xl-6">
+                    <p class="text-center    pt-sm-5 pt-md-5 pt-lg-5" >
                         Hazırlanan bu internet sayfasında yazılım ile ilgili pek çok paylaşıma rastlayacaksınız. Matematiği bir ağaç gibi düşünürsek, bu ağacın köklerinden birini de yazılım olarak tasarlayabiliriz. Yazılım, 0 ve 1dir; 0 ve 1 de hayatın işleyişi, akışı ve mantığıdır. Sizi hatasız işleyiş ve işlevsel döngüye ulaştırabilir. 
 
                         Öğrenmek yolda olmaktır. Hiç bitmez ve hep devam eder. Yazılım için de bu durum böyledir. Gelişim bakidir. Bu yolda öğrendiklerimi
@@ -100,30 +99,33 @@
                 </div>
             </div>
         </div>
+
         <div class="container mt-5">
             <h3 class=" text-center " >KRİPTO PARA</h3>
             <div class="row">
-                <div class="col-7">
-                    <p class="text-center m-auto " >
-                        Etrafınıza baktığınızda insanların sürekli para harcadığını görürsünüz. Siz de harcarsınız, yaşamanın temeli bu çıkar ilişkisine dayanır.
-                         Ancak büyük meblağalar ve kârlardan bahsediyorsak daha büyük düşünmemiz gerekir. Kredi kartları veya nakit taşınması sizin için yeterlidir belki ama her şeyin dijitalleştiği bu dönemde sizce de yeniliğin zamanı gelmedi mi? Örneğin bitcoine yatırım yapanların günümüzde ne kadar tatmin olduğu inkar edilemez bir gerçek. Sonraki kripto biriminin de en az bitcoin kadar sansasyonel olup olmayacağını nerden bilebiliriz ki? Uygun yatırımlar
-                         yapıldığı takdirde dijital ortamdan sağlanan bu gelir size hem güvence hem kâr sağlar. Bu yüzden kripto para, geleceğin umududur.
-                    </p>
-                </div>
-                <div class="col-5 ">
+                <div class="col-lg-12 col-xl-6">
                     <img src="{% static 'özelders/img/kripto1.jpg' %}" class="img-fluid rounded " alt="">
+                </div>
+                <div class="col-lg-12 col-xl-6">
+                    <p class="text-center    pt-sm-5 pt-md-5 pt-lg-5" >
+                        Hazırlanan bu internet sayfasında yazılım ile ilgili pek çok paylaşıma rastlayacaksınız. Matematiği bir ağaç gibi düşünürsek, bu ağacın köklerinden birini de yazılım olarak tasarlayabiliriz. Yazılım, 0 ve 1dir; 0 ve 1 de hayatın işleyişi, akışı ve mantığıdır. Sizi hatasız işleyiş ve işlevsel döngüye ulaştırabilir. 
+
+                        Öğrenmek yolda olmaktır. Hiç bitmez ve hep devam eder. Yazılım için de bu durum böyledir. Gelişim bakidir. Bu yolda öğrendiklerimi
+                        ve öğrenmekte olduğum acı tadlı tecrübelieri sizlerle paylaşacağım.
+                    </p>
                 </div>
             </div>
         </div>
+        
 
-
-        <div class="container mt-5">
+        
+        <div class="container mt-5  ">
             <h3 class=" text-center " >MANTIK VE OLASILIK</h3>  
             <div class="row">
-                <div class="col-5">
+                <div class="col-lg-12 col-xl-6">
                     <img src="{% static 'özelders/img/matematik.jpg' %}" class="img-fluid rounded " alt="">
                 </div>
-                <div class="col-7">
+                <div class="col-lg-12 col-xl-6">
                     <p class="text-center" >
                         “O zaman şöyle sorayım soruyu: Çıldırmaya başladığımda tam olarak ne yapmamı öneriyorsunuz?”
                         <br><br>
@@ -135,5 +137,6 @@
             </div>
         </div>
         </div>
+    </div>
  </body>
  </head>
