--- a/özelders/templates/özelders/navbar.html
+++ b/özelders/templates/özelders/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark   ">
     <div class="container-fluid">
       <a class="navbar-brand fs-2 fst-italic text-warning" href="{% url 'home' %}">
-        LOGO
+        <img src="{% static 'özelders/img/deneme.png' %}" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,11 +38,11 @@
       <button class=" border-warning bg-dark text-white rounded">Çıkış</button>
   </a>
 </li>
-</div>
 
 {% else %}
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+   
     <li class="nav-item   mt-2 me-3">
       <a href="{% url 'register' %}">
     <button class=" border-warning bg-dark text-white rounded " >Üye ol</button>
